Fixed EMT Assignment 1

--- a/assignments/Assignments_Python/Assignment_1.ipynb
+++ b/assignments/Assignments_Python/Assignment_1.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required.\n",
     "\n",
-    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) before the due-date. Please sumbit your assistments through this [link](https://forms.gle/5ocshXh5ZtUj8WXY6)."
+    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) and/or Vishnou ([vishnouvina@cs.toronto.edu]()) before the due-date. Please sumbit your assistments through this [link](https://forms.gle/5ocshXh5ZtUj8WXY6)."
    ]
   },
   {
@@ -35,7 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "!pip install ISLP\n",
     "!pip install numpy==1.24.3\n"
    ]
@@ -47,7 +46,7 @@
    "source": [
     "### Question 1: Simple Linear Regression \n",
     "\n",
-    "Let's set up our workspace and use the `Boston` dataset in the `ISLP` library. Type `Boston?` to learn more about the dataset."
+    "Let's set up our workspace and use the `Boston` dataset in the `ISLP` library. Print `Boston` to learn more about the dataset."
    ]
   },
   {
@@ -68,6 +67,8 @@
     "\n",
     "# Import specific objects\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
     "from statsmodels.stats.outliers_influence \\\n",
     "     import variance_inflation_factor as VIF\n",
     "from statsmodels.stats.anova import anova_lm\n",
@@ -86,8 +87,7 @@
    "outputs": [],
    "source": [
     "# Load the \"Boston\" dataset using the \"load_data\" function from the ISLP package\n",
-    "Boston = load_data('Boston')\n",
-    "Boston"
+    "Boston = load_data('Boston')"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "source": [
     "Before we fit and review model outputs, we should visualize our data. Review the code and plot, shown below. Answer the following questions:\n",
     "\n",
-    "_(i)_ What are the `medv` and `dis` variables being plotted? (Hint: review the ‘help()’ file)\n",
+    "_(i)_ What are the `medv` and `dis` variables being plotted? (Hint: review this [link](https://islp.readthedocs.io/en/latest/datasets/Boston.html))\n",
     "\n",
     "_(ii)_ What concept ‘defines’ the plotted line?"
    ]
@@ -144,13 +144,13 @@
     "\n",
     "_(iii)_ What is the (implied) null hypothesis? What is the (implied) alternative hypothesis?\n",
     "\n",
-    "_(iv)_ Now, let’s fit a simple regression model, using the general syntax `sm.OLS()` and `model.fit()`. As above, use `mdev` as the response variable Y, and `dis` as the predictor variable X."
+    "_(iv)_ Now, let’s fit a simple regression model, using the general syntax `sm.OLS()` and `model.fit()`. As above, use `medv` as the response variable Y, and `dis` as the predictor variable X. (Hint: use the syntax `sm.add_constant` with the appropriate argument)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ce9c13-768e-4ad3-adf9-159b987d040c",
+   "id": "88dbac72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
    "id": "ebacfc94-686d-4c5a-a2f3-15240f13d212",
    "metadata": {},
    "source": [
-    "Review your model output to answer the following questions (Hint: use the `summarize` and `conf_int` functions):    \n",
+    "Review your model output to answer the following questions (Hint: use the `summary` and `conf_int` functions):    \n",
     "_(v)_ What are the _coefficient estimates_ for $B_0$ (intercept) and $B_1$ (slope)?  \n",
     "_(vi)_ What are the _standard errors_ for $B_0$ and $B_1$?  \n",
     "_(vii)_ What are the _confidence intervals_ for $B_0$ and $B_1$?  \n",
@@ -187,13 +187,13 @@
    "id": "bce1e0bf-3c57-47c8-af30-464e6f584169",
    "metadata": {},
    "source": [
-    "_(i)_ Fit a multiple linear regression, with two predictor variables: $X_1$ is `dis`, and $X_2$ is `rm`. As before, keep `medv` as the response variable Y. (Hint: use the syntax `lm(y ~ x1 + x2)`)."
+    "_(i)_ Fit a multiple linear regression, with two predictor variables: $X_1$ is `dis`, and $X_2$ is `rm`. As before, keep `medv` as the response variable Y. (Hint: use the syntax `sm.add_constant` with the appropriate arguments)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c8f1016-041c-4aa8-ba28-c248cf6abe84",
+   "id": "be67292e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,15 +207,15 @@
    "source": [
     "_(ii)_ In the context of the `Boston` dataset, state the null and alternative hypotheses.\n",
     "\n",
-    "_(iii)_ Review the model output, using `summarize()`. Does it appear that both `dis` and `rm` are predictive of `medv`? How did you determine this?\n",
+    "_(iii)_ Review the model output, using `summary()`. Does it appear that both `dis` and `rm` are predictive of `medv`? How did you determine this?\n",
     "\n",
-    "_(iv)_ We can use the inbuilt `plot_regress_exog` function to generate helpful diagnostic plots (Hint: provide `plot_regress_exog` with the multiple regression model). Review the first generated plot, 'Residuals vs. Fitted'. Which observations are outliers? What impact might outliers have on our model?"
+    "_(iv)_ We can use the inbuilt `sm.graphics.plot_regress_exog` function to generate helpful diagnostic plots (Hint: provide `plot_regress_exog` with the multiple regression model). Review the first generated plot, 'Residuals vs. Fitted'. Which observations are outliers? What impact might outliers have on our model?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e6acec-fae2-493f-9510-bf3c35a046fe",
+   "id": "8c0d1d6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,13 +227,13 @@
    "id": "02726275-c15a-4629-9b2c-19184b0d9fbb",
    "metadata": {},
    "source": [
-    "_(v)_ Fit a second model, this time including an interaction between the two predictor variables. Is there an interaction? (Hint: use the syntax `lm(y ~ x1 * x2)`). State an interpretation of the interaction, in the context of the `Boston` dataset, in one or two sentences."
+    "_(v)_ Fit a second model, this time including an interaction between the two predictor variables. Is there an interaction? (Hint: add a variable `x1 * x2` where `x1` and `x2` are the predictor variables). State an interpretation of the interaction, in the context of the `Boston` dataset, in one or two sentences."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f2df676-5e25-449f-b004-d244a8b96d69",
+   "id": "789da998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
    "source": [
     "### Question 3: Classification using KNN\n",
     "\n",
-    "We'll now use the `Caravan` dataset from the `ISLP` package. (You may type Caravan? in the console to review details of the dataset.) In this dataset, the response variable of interest is `Purchase`, which indicates if a given customer purchased a caravan insurance policy. We will simultaneously use all other variables in the dataset to predict the response variable."
+    "We'll now use the `Caravan` dataset from the `ISLP` package. (You may use `Caravan.describe()` to review details of the dataset.) In this dataset, the response variable of interest is `Purchase`, which indicates if a given customer purchased a caravan insurance policy. We will simultaneously use all other variables in the dataset to predict the response variable."
    ]
   },
   {
@@ -259,7 +259,8 @@
    "source": [
     "# Load the \"Caravan\" dataset using the \"load_data\" function from the ISLP package\n",
     "Caravan = load_data('Caravan')\n",
-    "Caravan"
+    "\n",
+    "# Add your code here"
    ]
   },
   {
@@ -267,13 +268,11 @@
    "id": "ad60779b-cba9-4972-aeeb-b89e65fda11c",
    "metadata": {},
    "source": [
-    "Before fitting any model, it is essential to understand our data. Answer the following questions about the `Caravan` dataset (Hint: use `print`):  \n",
+    "Before fitting any model, it is essential to understand our data. Answer the following questions about the `Caravan` dataset (Hint: use `print` and `describe`):  \n",
     "_(i)_ How many observations (rows) does the dataset contain?    \n",
     "_(ii)_ How many variables (columns) does the dataset contain?    \n",
     "_(iii)_ What 'variable' type is the response variable `Purchase` (e.g., 'character', 'factor', 'numeric', etc)? What are the 'levels' of the variable?    \n",
-    "_(iv)_ How many predictor variables do we have (Hint: all variables other than `Purchase`)?  \n",
-    "\n",
-    "Next, we must preform 'pre-processing' or 'data munging', to prepare our data for classification/prediction. For KNN, there are three essential steps. A first essential step is to 'standardize' the predictor variables. We can achieve this using the `scale` function, provided as follows:"
+    "_(iv)_ How many predictor variables do we have (Hint: all variables other than `Purchase`)?  "
    ]
   },
   {
@@ -283,7 +282,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(Caravan)"
+    "# Add your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f5d31d9",
+   "metadata": {},
+   "source": [
+    "Next, we must preform 'pre-processing' or 'data munging', to prepare our data for classification/prediction. For KNN, there are three essential steps. A first essential step is to 'standardize' the predictor variables. We can achieve this using the `scaler` method, provided as follows:"
    ]
   },
   {
@@ -361,7 +368,7 @@
    "id": "58f16dbc-0be6-4cc8-b2c4-edab7042c702",
    "metadata": {},
    "source": [
-    "_(ix)_ We are finally set to fit the KNN model. In Python, we can use the `KNeighborsClassifier()` function. Fit the KNN with k=1. (You may review arguments to knn by typing `knn?`). "
+    "_(ix)_ We are finally set to fit the KNN model. In Python, we can use the `KNeighborsClassifier()` function. Fit the KNN with k=1. (You may review arguments to knn by typing `help(knn.fit)`). "
    ]
   },
   {
@@ -380,8 +387,8 @@
    "metadata": {},
    "source": [
     "Using your fit model, answer the following questions:   \n",
-    "_(x)_ What is the prediction accuracy? (Hint: use the `mean` function, and compare your model to `testing_Y`)  \n",
-    "_(xi)_ What is the predictor error (Hint: as error is the inverse of accuracy, use the 'not' operator, `!`)  "
+    "_(x)_ What is the prediction accuracy? (Hint: use the `score` method, and compare your model to `testing_Y`)  \n",
+    "_(xi)_ What is the predictor error ? (Hint: compute it from the accuracy)"
    ]
   },
   {
@@ -426,23 +433,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e559dcaf-6504-4832-a2f7-b571b9c908c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fit knn, with k=3"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d7fff1dd-e4ce-4a60-96a0-d08136e9bf5e",
    "metadata": {},
    "source": [
     "### Question 4: Resampling via Bootstrapping\n",
     "\n",
-    "Now, we'll use the `iris` dataset, which is a built-in dataset in R, but can be added to Python. As always, start by reviewing a description of the dataset, by typing `iris?` in the console. "
+    "Now, we'll use the `iris` dataset, which we will add to Python using the `statsmodels` library. As always, start by reviewing a description of the dataset, by printing the dataset."
    ]
   },
   {
@@ -476,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Add your code here to set the seed"
    ]
   },
   {
@@ -490,17 +487,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e0d8c3-1406-4291-9ab2-554de3d2599f",
+   "id": "f6c76495",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_func(iris, index):\n",
+    "def my_func(data):\n",
     "\n",
-    "    # Extract the specified rows using the given index\n",
-    "    selected_data = iris.iloc[index]\n",
-    "\n",
-    "    # Calculate the median of 'Petal.Length'\n",
-    "    result = selected_data['Petal.Length'].median()\n",
+    "    # Calculate the mean of data (which will be a bootstrap sample from 'Petal.Length')\n",
+    "    result = data.median()\n",
     "    \n",
     "    return result"
    ]
@@ -522,9 +516,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set seed\n",
+    "# Provided function to compute the bootstrap standard error\n",
+    "def boot_SE(data, func, R):\n",
+    "    \n",
+    "    # Initialize an empty list to store the results\n",
+    "    results = []\n",
+    "    \n",
+    "    # Perform bootstrapping\n",
+    "    for _ in range(R):\n",
+    "        # Generate a bootstrap sample\n",
+    "        bootstrap_sample = np.random.choice(data, size=len(data), replace=True)\n",
+    "        \n",
+    "        # Compute the result\n",
+    "        result = func(bootstrap_sample)\n",
+    "        \n",
+    "        # Store the result\n",
+    "        results.append(result)\n",
+    "    \n",
+    "    # Return the standard deviation of the results\n",
+    "    return results\n",
     "\n",
-    "# boot function"
+    "# Compute the bootstrapped samples\n",
+    "boot_se_samples = boot_SE(df['Petal.Length'], my_func, 1000)"
    ]
   },
   {
@@ -532,19 +545,17 @@
    "id": "785fe758-f395-40b6-a9a3-28ec2efeba29",
    "metadata": {},
    "source": [
-    "_(v)_ Justify your choice for R.\n",
+    "_(v)_ First, What is the original mean value ?\n",
     "\n",
-    "_(vi)_ Review the model output. What is the original mean value? What is the original standard error?\n",
+    "Next, let's look _inside_ our bootstrapping to understand the new, bootstrapped sample we have created. Let's review the bootstrapped range, by using `t_range = np.ptp(boot_se_samples)`.\n",
     "\n",
-    "Next, let's look _inside_ our model to understand the new, bootstrapped sample we have created. The variable of interest is `t`. For example, if I called my model `myboot`, I can review the bootstrapped range, by typing `t_range = np.ptp(myboot['t'])`.\n",
-    "\n",
-    "_(vii)_. Write code to review the bootstrapped standard deviation (Hint: the function name is `sd`):"
+    "_(vii)_. Write code to review the bootstrapped mean value, and the standard deviation of the bootstrapped samples. Compare the mean against its original value."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e65ae0c-fbe9-4567-8e22-d9b6ec5802d2",
+   "id": "7686243c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +567,7 @@
    "id": "66c6c663-f3bb-4a15-8896-6dccfb7259fd",
    "metadata": {},
    "source": [
-    "_(viii)_ Next, let's compute 95% confidence intervals, for the mean value of iris petal length. Read the help to understand required arguments, and include an optional argument to select just one of the four 'types' of interval."
+    "_(viii)_ Next, let's compute 95% confidence intervals, for the mean value of iris petal length. (Hint: use the `np.percentile` function)"
    ]
   },
   {
@@ -574,17 +585,35 @@
    "id": "488e54f7-ebe4-4740-835c-9832320005d0",
    "metadata": {},
    "source": [
-    "_(ix)_. Use the plot function on your model object. Review `Histogram of t`. What does this histogram show?"
+    "_(ix)_. Use the plot function to create an histogram of the bootstrapped samples. What does this histogram show ?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc591f1a-e2be-4a85-b35c-e4938b9a4dcf",
+   "id": "4fca4e3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "#Complete this\n",
+    "\n",
+    "# Create a figure and axis\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Create the histogram\n",
+    "#Add your code here\n",
+    "\n",
+    "# Add a title\n",
+    "#Add your code here\n",
+    "\n",
+    "# Add a label to the x-axis\n",
+    "#Add your code here\n",
+    "\n",
+    "# Add a label to the y-axis\n",
+    "#Add your code here\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
@@ -622,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
