removing outputs of all jupyter notebooks, while also minor tweaks here and there. Making sure files are runnable.

--- a/assignments/Assignment_2.ipynb
+++ b/assignments/Assignment_2.ipynb
@@ -28,24 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "589d262b-0089-4b1a-821d-d55570e0d38f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: l0bnb in /Users/Dan/miniconda3/lib/python3.11/site-packages (1.0.0)\n",
-      "Requirement already satisfied: numpy>=1.18.1 in /Users/Dan/miniconda3/lib/python3.11/site-packages (from l0bnb) (1.24.3)\n",
-      "Requirement already satisfied: scipy>=1.4.1 in /Users/Dan/miniconda3/lib/python3.11/site-packages (from l0bnb) (1.11.4)\n",
-      "Requirement already satisfied: numba>=0.53.1 in /Users/Dan/miniconda3/lib/python3.11/site-packages (from l0bnb) (0.59.0)\n",
-      "Requirement already satisfied: llvmlite<0.43,>=0.42.0dev0 in /Users/Dan/miniconda3/lib/python3.11/site-packages (from numba>=0.53.1->l0bnb) (0.42.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import standard libraries\n",
     "import numpy as np\n",
@@ -85,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f9b3824c-e20a-4709-b7e1-a094bd0841c4",
    "metadata": {},
    "outputs": [],
@@ -115,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6cb0abf7-57e2-447c-8f2a-98838401a863",
    "metadata": {},
    "outputs": [],
@@ -133,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0773d418-870f-4122-bbf0-3fa5f26523ff",
    "metadata": {},
    "outputs": [],
@@ -151,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a807b1e0-821b-4bb6-851b-c0ce1d197f6f",
    "metadata": {},
    "outputs": [],
@@ -171,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bfd956ff-1d69-4500-b116-9319958eab95",
    "metadata": {},
    "outputs": [],
@@ -195,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "525f0fcc-6d69-4a50-80a5-d66dcf3b991f",
    "metadata": {},
    "outputs": [],
@@ -215,323 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7fe7cfb9-e721-495b-874a-4930fcb85976",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>brozek</th>\n",
-       "      <th>siri</th>\n",
-       "      <th>density</th>\n",
-       "      <th>age</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>height</th>\n",
-       "      <th>adipos</th>\n",
-       "      <th>free</th>\n",
-       "      <th>neck</th>\n",
-       "      <th>chest</th>\n",
-       "      <th>abdom</th>\n",
-       "      <th>hip</th>\n",
-       "      <th>thigh</th>\n",
-       "      <th>knee</th>\n",
-       "      <th>ankle</th>\n",
-       "      <th>biceps</th>\n",
-       "      <th>forearm</th>\n",
-       "      <th>wrist</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12.6</td>\n",
-       "      <td>12.3</td>\n",
-       "      <td>1.0708</td>\n",
-       "      <td>23</td>\n",
-       "      <td>154.25</td>\n",
-       "      <td>67.75</td>\n",
-       "      <td>23.7</td>\n",
-       "      <td>134.9</td>\n",
-       "      <td>36.2</td>\n",
-       "      <td>93.1</td>\n",
-       "      <td>85.2</td>\n",
-       "      <td>94.5</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>27.4</td>\n",
-       "      <td>17.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>1.0853</td>\n",
-       "      <td>22</td>\n",
-       "      <td>173.25</td>\n",
-       "      <td>72.25</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>161.3</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>93.6</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>98.7</td>\n",
-       "      <td>58.7</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>28.9</td>\n",
-       "      <td>18.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>24.6</td>\n",
-       "      <td>25.3</td>\n",
-       "      <td>1.0414</td>\n",
-       "      <td>22</td>\n",
-       "      <td>154.00</td>\n",
-       "      <td>66.25</td>\n",
-       "      <td>24.7</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>95.8</td>\n",
-       "      <td>87.9</td>\n",
-       "      <td>99.2</td>\n",
-       "      <td>59.6</td>\n",
-       "      <td>38.9</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>28.8</td>\n",
-       "      <td>25.2</td>\n",
-       "      <td>16.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10.9</td>\n",
-       "      <td>10.4</td>\n",
-       "      <td>1.0751</td>\n",
-       "      <td>26</td>\n",
-       "      <td>184.75</td>\n",
-       "      <td>72.25</td>\n",
-       "      <td>24.9</td>\n",
-       "      <td>164.7</td>\n",
-       "      <td>37.4</td>\n",
-       "      <td>101.8</td>\n",
-       "      <td>86.4</td>\n",
-       "      <td>101.2</td>\n",
-       "      <td>60.1</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>32.4</td>\n",
-       "      <td>29.4</td>\n",
-       "      <td>18.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>27.8</td>\n",
-       "      <td>28.7</td>\n",
-       "      <td>1.0340</td>\n",
-       "      <td>24</td>\n",
-       "      <td>184.25</td>\n",
-       "      <td>71.25</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>133.1</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>97.3</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>101.9</td>\n",
-       "      <td>63.2</td>\n",
-       "      <td>42.2</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>27.7</td>\n",
-       "      <td>17.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>11.5</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1.0736</td>\n",
-       "      <td>70</td>\n",
-       "      <td>134.25</td>\n",
-       "      <td>67.00</td>\n",
-       "      <td>21.1</td>\n",
-       "      <td>118.9</td>\n",
-       "      <td>34.9</td>\n",
-       "      <td>89.2</td>\n",
-       "      <td>83.6</td>\n",
-       "      <td>88.8</td>\n",
-       "      <td>49.6</td>\n",
-       "      <td>34.8</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>25.7</td>\n",
-       "      <td>18.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>32.3</td>\n",
-       "      <td>33.6</td>\n",
-       "      <td>1.0236</td>\n",
-       "      <td>72</td>\n",
-       "      <td>201.00</td>\n",
-       "      <td>69.75</td>\n",
-       "      <td>29.1</td>\n",
-       "      <td>136.1</td>\n",
-       "      <td>40.9</td>\n",
-       "      <td>108.5</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>104.5</td>\n",
-       "      <td>59.6</td>\n",
-       "      <td>40.8</td>\n",
-       "      <td>23.2</td>\n",
-       "      <td>35.2</td>\n",
-       "      <td>28.6</td>\n",
-       "      <td>20.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>28.3</td>\n",
-       "      <td>29.3</td>\n",
-       "      <td>1.0328</td>\n",
-       "      <td>72</td>\n",
-       "      <td>186.75</td>\n",
-       "      <td>66.00</td>\n",
-       "      <td>30.2</td>\n",
-       "      <td>133.9</td>\n",
-       "      <td>38.9</td>\n",
-       "      <td>111.1</td>\n",
-       "      <td>111.5</td>\n",
-       "      <td>101.7</td>\n",
-       "      <td>60.3</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>31.3</td>\n",
-       "      <td>27.2</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>25.3</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1.0399</td>\n",
-       "      <td>72</td>\n",
-       "      <td>190.75</td>\n",
-       "      <td>70.50</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>142.6</td>\n",
-       "      <td>38.9</td>\n",
-       "      <td>108.3</td>\n",
-       "      <td>101.3</td>\n",
-       "      <td>97.8</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>41.6</td>\n",
-       "      <td>22.7</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>29.4</td>\n",
-       "      <td>19.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>30.7</td>\n",
-       "      <td>31.9</td>\n",
-       "      <td>1.0271</td>\n",
-       "      <td>74</td>\n",
-       "      <td>207.50</td>\n",
-       "      <td>70.00</td>\n",
-       "      <td>29.8</td>\n",
-       "      <td>143.7</td>\n",
-       "      <td>40.8</td>\n",
-       "      <td>112.4</td>\n",
-       "      <td>108.5</td>\n",
-       "      <td>107.1</td>\n",
-       "      <td>59.3</td>\n",
-       "      <td>42.2</td>\n",
-       "      <td>24.6</td>\n",
-       "      <td>33.7</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>20.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>252 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     brozek  siri  density  age  weight  height  adipos   free  neck  chest  \\\n",
-       "0      12.6  12.3   1.0708   23  154.25   67.75    23.7  134.9  36.2   93.1   \n",
-       "1       6.9   6.1   1.0853   22  173.25   72.25    23.4  161.3  38.5   93.6   \n",
-       "2      24.6  25.3   1.0414   22  154.00   66.25    24.7  116.0  34.0   95.8   \n",
-       "3      10.9  10.4   1.0751   26  184.75   72.25    24.9  164.7  37.4  101.8   \n",
-       "4      27.8  28.7   1.0340   24  184.25   71.25    25.6  133.1  34.4   97.3   \n",
-       "..      ...   ...      ...  ...     ...     ...     ...    ...   ...    ...   \n",
-       "247    11.5  11.0   1.0736   70  134.25   67.00    21.1  118.9  34.9   89.2   \n",
-       "248    32.3  33.6   1.0236   72  201.00   69.75    29.1  136.1  40.9  108.5   \n",
-       "249    28.3  29.3   1.0328   72  186.75   66.00    30.2  133.9  38.9  111.1   \n",
-       "250    25.3  26.0   1.0399   72  190.75   70.50    27.0  142.6  38.9  108.3   \n",
-       "251    30.7  31.9   1.0271   74  207.50   70.00    29.8  143.7  40.8  112.4   \n",
-       "\n",
-       "     abdom    hip  thigh  knee  ankle  biceps  forearm  wrist  \n",
-       "0     85.2   94.5   59.0  37.3   21.9    32.0     27.4   17.1  \n",
-       "1     83.0   98.7   58.7  37.3   23.4    30.5     28.9   18.2  \n",
-       "2     87.9   99.2   59.6  38.9   24.0    28.8     25.2   16.6  \n",
-       "3     86.4  101.2   60.1  37.3   22.8    32.4     29.4   18.2  \n",
-       "4    100.0  101.9   63.2  42.2   24.0    32.2     27.7   17.7  \n",
-       "..     ...    ...    ...   ...    ...     ...      ...    ...  \n",
-       "247   83.6   88.8   49.6  34.8   21.5    25.6     25.7   18.5  \n",
-       "248  105.0  104.5   59.6  40.8   23.2    35.2     28.6   20.1  \n",
-       "249  111.5  101.7   60.3  37.3   21.5    31.3     27.2   18.0  \n",
-       "250  101.3   97.8   56.0  41.6   22.7    30.5     29.4   19.8  \n",
-       "251  108.5  107.1   59.3  42.2   24.6    33.7     30.0   20.9  \n",
-       "\n",
-       "[252 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data\n",
     "fat = faraway.datasets.fat.load()\n",
@@ -550,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "665d4f3d-5c0f-46a9-8a87-e513a9f94beb",
    "metadata": {},
    "outputs": [],
@@ -570,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "be3e74cc-7a03-4828-a548-109f46f32cbf",
    "metadata": {},
    "outputs": [],
@@ -596,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3e248942-6284-40c2-85b5-6cd73f759a7c",
    "metadata": {},
    "outputs": [],
@@ -614,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c13496de-4a12-4554-a84d-72d600928d69",
    "metadata": {},
    "outputs": [],
@@ -632,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ce25fe5c-a660-4013-9ce9-0260961e6afb",
    "metadata": {},
    "outputs": [],
@@ -650,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "cd90ee40-095c-4181-ab6f-d30db316429a",
    "metadata": {},
    "outputs": [],
@@ -670,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a602f4aa-096a-448c-9105-52686e17bd45",
    "metadata": {},
    "outputs": [],
@@ -704,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2b4be629-54b0-4b5c-b663-953eb74f855e",
    "metadata": {},
    "outputs": [],
@@ -734,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7dd89689-e5cc-41f9-934a-22264f82d24a",
    "metadata": {},
    "outputs": [],
@@ -752,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ea153890-d13f-4cfd-a0f3-0f85c6a402d8",
    "metadata": {},
    "outputs": [],
@@ -770,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "02dcd11c-98a1-4cb6-9388-dac56b7c90d9",
    "metadata": {},
    "outputs": [],
@@ -795,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
