--- a/exercises/6.4-resampling_exercises.ipynb
+++ b/exercises/6.4-resampling_exercises.ipynb
@@ -22,19 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c234885",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install ISLP\n",
-    "\n",
-    "!pip install numpy==1.24.3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "6edbc31d-be7c-4dd3-bb07-a9f681754433",
    "metadata": {},
    "outputs": [],
@@ -78,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "0419abe2-c733-4124-b202-45f6a8bf953e",
    "metadata": {},
    "outputs": [],
@@ -99,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "1c531b5b-803b-42ed-88f0-e20242e0ad85",
    "metadata": {},
    "outputs": [],
@@ -121,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "dda5e219-dcd0-4569-a6b3-02954d68d2fc",
    "metadata": {},
    "outputs": [
@@ -131,7 +119,7 @@
        "23.61661706966988"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "22117be0-29ae-4ccb-9b93-c5c538e90528",
    "metadata": {},
    "outputs": [
@@ -182,7 +170,7 @@
        "24.23151351792924"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "752e078f-f2a6-40c9-9597-e45a0698b8d1",
    "metadata": {},
    "outputs": [
@@ -222,7 +210,7 @@
        "array([24.23151352, 19.24821312, 19.33498406, 19.42443033, 19.03323827])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "16c32ccf-4e6d-412d-a89a-7f954cb731d5",
    "metadata": {},
    "outputs": [
@@ -273,7 +261,7 @@
        "array([24.20766449, 19.18533142, 19.27626666, 19.47848403, 19.13720581])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "07cd0632-1ae7-463e-8e0f-6504fb70f3a1",
    "metadata": {},
    "outputs": [],
@@ -348,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "id": "6e4973de-b821-4af8-8e0f-61befe6d86a8",
    "metadata": {},
    "outputs": [
@@ -358,7 +346,7 @@
        "0.57583207459283"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "71bfd7c4-02b0-45ad-99f4-616ace0f044c",
    "metadata": {},
    "outputs": [
@@ -387,7 +375,7 @@
        "0.6074452469619004"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,16 +398,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "4c616715-c7e3-4230-a313-58ba81bdd69d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "\n",
+    "\n",
+    "\n",
     "def boot_SE(func,\n",
     "            D,\n",
     "            n=None,\n",
     "            B=1000,\n",
     "            seed=0):\n",
+    "    # NOTE: Suppress FutureWarning in ISLP.models.columns\n",
+    "    # The warning is related to Series.__getitem__ treating keys as positions, which is deprecated.\n",
+    "    # Since ISLP is an external library that I don't control, and this specific warning does not\n",
+    "    # affect my current usage, I'm suppressing it to keep the output clean and focused on relevant information.\n",
+    "    warnings.filterwarnings(action='ignore', category=FutureWarning, module='ISLP.models.columns', lineno=151)\n",
+    "    \n",
     "    rng = np.random.default_rng(seed)\n",
     "    first_, second_ = 0, 0\n",
     "    n = n or D.shape[0]\n",
@@ -443,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "id": "5c693db4-e496-4c57-99db-f558c6213874",
    "metadata": {},
    "outputs": [
@@ -453,7 +451,7 @@
        "0.09118176521277699"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "id": "14434d6e-89ec-4133-8898-85d4ad811dfd",
    "metadata": {},
    "outputs": [
@@ -507,7 +505,7 @@
        "       [39.64280792, -0.15555698]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "483dee5f-e600-482f-b41f-b324570225d9",
    "metadata": {},
    "outputs": [
@@ -551,7 +549,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,10 +575,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "id": "f46fca2a-d45e-47d8-ac66-5aa0b110f16d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Dan/miniconda3/envs/learners/lib/python3.11/site-packages/ISLP/models/__init__.py:49: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  results_table = pd.read_html(tab.as_html(),\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -589,7 +595,7 @@
        "Name: std err, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "id": "efde4625-8e96-404b-a4e2-89ecf2f6faab",
    "metadata": {},
    "outputs": [
@@ -625,7 +631,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,10 +654,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "a94305c4-bfe3-4d56-b7d3-7c00a3d9b3e5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Dan/miniconda3/envs/learners/lib/python3.11/site-packages/ISLP/models/__init__.py:49: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  results_table = pd.read_html(tab.as_html(),\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -661,7 +675,7 @@
        "Name: std err, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
