Convertting lesson plans from word doc to md

--- a/lesson_plans/6.9-Survival_Analysis_and_Censored_Data_lesson_plan_Python.md
+++ b/lesson_plans/6.9-Survival_Analysis_and_Censored_Data_lesson_plan_Python.md
@@ -1,4 +1,4 @@
-**Section 6.9: Survival Analysis and Censored Data in Python**
+# Section 6.9: Survival Analysis and Censored Data in Python
 
 **Duration:** 2 hours
 
