Added requirements.txt, fixed few bugs in exo6.2

--- a/exercises/6.2-linear_regression_exercises.ipynb
+++ b/exercises/6.2-linear_regression_exercises.ipynb
@@ -66,7 +66,7 @@
    "id": "6508f966-1f84-4d29-b91d-c3713a857bab",
    "metadata": {},
    "source": [
-    "Hint: Type `Boston?` to find out more about the dataset."
+    "Hint: Type `print(Boston)` to find out more about the dataset."
    ]
   },
   {
@@ -130,7 +130,7 @@
    "source": [
     "**Note**: `sm.OLS()` does not fit the model; it specifies the model. `model.fit()` does the actual fitting.\n",
     "\n",
-    "The `ISLP` function `summarize()` produces a simple table of the parameter estimates, their standard errors, t-statistics and p-values. The function takes a single argument, such as the object `results` returned here by the `fit` method, and returns such a summary."
+    "The `ISLP` function `results.summary()` produces a simple table of the parameter estimates, their standard errors, t-statistics and p-values. The function takes a single argument, such as the object `results` returned here by the `fit` method, and returns such a summary."
    ]
   },
   {
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "# Summarize results\n",
-    "summarize(results)"
+    "results.summary()"
    ]
   },
   {
@@ -150,16 +150,6 @@
    "metadata": {},
    "source": [
     "The output tells us that ˆβ0 = −34.6706 and ˆβ1 = 9.1021"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c0b78bb-411d-4a86-a7da-917b77405f2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.summary()"
    ]
   },
   {
@@ -355,13 +345,7 @@
     "\n",
     "Here we use the `Boston` data again. \n",
     "\n",
-    "We can examine the relationship between `medv` and `chas`, where\n",
-    "\\begin{align*}\n",
-    "\\text{chas} = \\left\\{\\begin{array}{ll}\n",
-    "1 & \\text { if } \\text{tract bounds Charles River} \\\\\n",
-    "0 & \\text { if } \\text{not}\n",
-    "\\end{array}\\right. \n",
-    "\\end{align*}"
+    "We can examine the relationship between `medv` and `chas`, where `chas` is 1 if tract bounds Charles River, 0 if not."
    ]
   },
   {
@@ -398,7 +382,7 @@
     "\n",
     "Let's look at the relationship between the response `medv` and the predictors `lstat` (the percent of households with low socioeconomic status) and `age` (the percent of homes built prior to 1940). We can also include the interaction term between `lstat` and `age`.\n",
     "\n",
-    "The syntax used to implement this is `lm(y ~ x1 + x2 + x1:x2, data)` or `lm(y ~ x1 * x2, data)` for shorthand."
+    "The syntax used to implement this is or `sm.OLS.from_formula(y ~ x1 * x2, data)` for shorthand."
    ]
   },
   {
@@ -487,7 +471,7 @@
    "source": [
     "***What information about our fitted model can you gather from these plots? Are there any outliers or high leverage points?***\n",
     "\n",
-    "***Fit a linear regression model on the `Boston` data set including all the predictors. The shorthand for this is `lm(medv ~ .)`. Interpret the summary including the hypothesis tests for the coefficients and the RSE and $R^2 values. Make plots of the fit including confidence intervals for the fitted line. Recreate and interpret the three plots we have just made using your new fit.***\n",
+    "***Fit a linear regression model on the `Boston` data set including all the predictors. The shorthand for this is `sm.OLS.from_formula(medv ~ .)`. Interpret the summary including the hypothesis tests for the coefficients and the RSE and $R^2 values. Make plots of the fit including confidence intervals for the fitted line. Recreate and interpret the three plots we have just made using your new fit.***\n",
     "\n",
     "Ask for help if you get stuck!\n"
    ]
